# files-sdk-rs

./: .gitignore  CHANGELOG.md  CLI_EXAMPLE_IDEAS.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml  swagger_doc.json
.github/workflows/: ci.yml
examples/: automation.rs  error_handling.rs  file_operations.rs  file_sharing.rs  mockall_example.rs  rate_limiting.rs  retry_timeout.rs  simple_upload.rs  streaming.rs  test_doubles_example.rs  test_groups.rs  test_multiple_uploads.rs  test_permissions.rs  test_users.rs  tower_observability.rs  tower_rate_limit.rs  tower_retry.rs  user_management.rs  verify_uploads.rs  wiremock_example.rs
examples/files-watch/: Cargo.toml  README.md
examples/files-watch/src/: cli.rs  config.rs  conflict.rs  daemon.rs  ignore.rs  lib.rs  main.rs  progress.rs  state.rs  syncer.rs  watcher.rs
examples/files-watch/src/commands/: init.rs  list.rs  mod.rs  start.rs  status.rs  sync.rs
examples/files-watch/tests/: integration_tests.rs
src/: action_notification_export_results.rs  action_notification_exports.rs  api_key.rs  api_request_logs.rs  apps.rs  as2_partners.rs  as2_stations.rs  automation_logs.rs  automation_runs.rs  bandwidth_snapshots.rs  bundle_actions.rs  bundle_downloads.rs  bundle_notifications.rs  bundle_registrations.rs  child_site_management_policies.rs  clickwraps.rs  client.rs  dns_records.rs  email_incoming_messages.rs  email_logs.rs  error.rs  exavault_api_request_logs.rs  file_comment_reactions.rs  file_comments.rs  file_migrations.rs  files.rs  form_field_sets.rs  gpg_keys.rs  groups.rs  history_export_results.rs  inbox_recipients.rs  inbox_uploads.rs  interceptors.rs  ip_addresses.rs  lib.rs  message_reactions.rs  messages.rs  payments.rs  prelude.rs  progress.rs  (+23 more)
src/admin/: child_site_management_policies.rs  history.rs  history_exports.rs  invoices.rs  mod.rs  site.rs
src/advanced/: external_events.rs  holiday_regions.rs  mod.rs
src/as2/: as2_incoming_messages.rs  as2_outgoing_messages.rs  as2_partners.rs  as2_stations.rs  mod.rs
src/automation/: automation_runs.rs  automations.rs  behaviors.rs  mod.rs  remote_mount_backends.rs  remote_servers.rs  sync_runs.rs  syncs.rs
src/developers/: mod.rs
src/files/: file_actions.rs  file_comments.rs  file_migration_logs.rs  files.rs  folders.rs  mod.rs
src/integrations/: mod.rs  siem_http_destinations.rs
src/logs/: api_request_logs.rs  automation_logs.rs  email_logs.rs  external_events.rs  ftp_action_logs.rs  mod.rs  outbound_connection_logs.rs  settings_changes.rs  sftp_action_logs.rs  sync_logs.rs  web_dav_action_logs.rs
src/messages/: message_comment_reactions.rs  message_comments.rs  message_reactions.rs  mod.rs  notifications.rs
src/security/: clickwraps.rs  gpg_keys.rs  ip_addresses.rs  mod.rs  sftp_host_keys.rs
src/sharing/: bundle_notifications.rs  bundle_recipients.rs  bundles.rs  form_field_sets.rs  inbox_recipients.rs  inbox_registrations.rs  mod.rs  share_groups.rs
src/storage/: locks.rs  mod.rs  priorities.rs  projects.rs  restores.rs  snapshots.rs  usage_snapshots.rs
src/users/: api_keys.rs  group_users.rs  groups.rs  mod.rs  permissions.rs  public_keys.rs  sessions.rs  sso_strategies.rs  user.rs  user_lifecycle_rules.rs  user_requests.rs  user_sftp_client_uses.rs  users.rs
tests/: behaviors_mock.rs  bundles_real_api.rs  file_comments_mock.rs  files_real_api.rs  groups_mock.rs  history_mock.rs  inbox_uploads_mock.rs  mock.rs  payments_mock.rs  permissions_mock.rs  real.rs  remote_servers_mock.rs  site_mock.rs  users_mock.rs  users_real_api.rs
tests/mock/: mod.rs
tests/mock/admin/: invoices.rs  mod.rs
tests/mock/automation/: automations.rs  mod.rs
tests/mock/files/: files.rs  mod.rs
tests/mock/messages/: messages.rs  mod.rs  notifications.rs
tests/mock/sharing/: bundles.rs  mod.rs  requests.rs
tests/mock/users/: mod.rs  public_keys.rs
tests/real/: mod.rs
tests/real/admin/: action_notification_export_results.rs  action_notification_exports.rs  child_site_management_policies.rs  dns_records.rs  history.rs  history_export_results.rs  history_exports.rs  invoices.rs  (+5 more)
(+80 files in other folders)
