[package]
name = "files-sdk"
version = "0.3.1"
edition = "2024"
authors = ["Josh Rotenberg <josh@rotenberg.io>"]
license = "MIT OR Apache-2.0"
description = "Rust SDK for the Files.com API"
repository = "https://github.com/joshrotenberg/files-idk-rs"
keywords = ["files", "filescom", "api", "storage", "cloud"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
governor = "0.8"
tracing = { version = "0.1", optional = true }
url = "2.5.7"
futures = "0.3"
async-stream = "0.3"
walkdir = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"

[features]
default = []
integration-tests = []
tracing = ["dep:tracing"]
