[package]
name = "files-sdk"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust SDK for the Files.com API"
repository = "https://github.com/joshrotenberg/files-sdk-rs"
keywords = ["files", "filescom", "api", "storage", "cloud"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", optional = true }
url = "2.5.7"
futures = "0.3"
async-stream = "0.3"
walkdir = "2.5"

# Tower middleware support (optional)
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
http = { version = "1.1", optional = true }

[dev-dependencies]
mockall = "0.13"
proptest = "1.5"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"

[features]
default = []
integration-tests = []
tracing = ["dep:tracing"]
tower = ["dep:tower", "dep:tower-http", "dep:http"]
