[package]
name = "files-watch"
version = "0.1.0"
edition = "2021"

[lib]
name = "files_watch"
path = "src/lib.rs"

[[bin]]
name = "files-watch"
path = "src/main.rs"

[dependencies]
files-sdk = { path = "../.." }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
notify-debouncer-full = "0.3"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
glob = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
filetime = "0.2"
async-recursion = "1.1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
